Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22082

Access specifier ignored in icons for static data members

    XMLWordPrintable

Details

    • 1b0cba38dd6d5e72104354bb77ce4ba8f1f9d681 (qt-creator/qt-creator/4.9)

    Description

      The icons in outline/completion for static data members always indicate public access, even if they are protected or private.

      The following snipped would show three times the same icon.

      class Class {
      public:
          int static publicStaticVariable;
      protected:
          int static protectedStaticVariable;
      private:
          int static privateStaticVariable;
      };
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-22082
        # Subject Branch Project Status CR V

        Activity

          People

            yvvan Ivan Donchevskii
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes